--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
 
     body {
-      background-color: #D5E1EF;
+      background-color: #F8F8F8;
       display: flex;
       flex-direction: column;
       justify-content: center;
